feat: add layered resource pack management